# C-von-null

./: CMakeLists.txt  README.md
Praktikum_001_Grundlagen/: main.c
Praktikum_002_Doseberechung/: dose.c  dose.h  main.c
Praktikum_003_Array_Tools/: arrayTools.c  arrayTools.h  main.c
